Updated by task 'AUTO_TM_MT_1743526275963'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/9a08ce861020fa4df293e83485d156df8d7f0110

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 308f5ebf-dd28-4f95-abca-24cc6c212bf4
-source-git-commit: 4f81f755789613222a66bed2961117604ae19e62
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '916'
+source-wordcount: '896'
 ht-degree: 0%
 
 ---
@@ -16,9 +16,7 @@ ht-degree: 0%
 
 ## Adobe Scene7 Viewers {#section-0b0363fae0274737bace119f281e740f}
 
-Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
-
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö.
 
 När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot Adobe standardtestserver och s7is1-preview-staging.scene7.com.
 
@@ -62,10 +60,10 @@ Följande stöds nu:
 
 Följande fel har korrigerats:
 
-* Potentiella säkerhetsproblem för Flasharna Fastzoom och Flyout.
+* Potentiella säkerhetsproblem i Flash Fastzoom- och Flyout-visningsprogram.
 * visningsprogram läses inte in på grund av en okänd UserAgent.
 * Det går inte att dra och släppa i eCatalog Viewer i Internet Explorer med en sida som innehåller bildscheman.
-* Video Viewer förhindrar åtkomst till plugin-programmet för avblockering av Flashar.
+* Video Viewer förhindrar åtkomst till att låsa upp Flash-plugin.
 * -visningsprogram förhindrar utskrift i Firefox-webbläsare.
 * I Video Viewer visas en viss darr när zoomningen initieras eller återställs.
 * HTTPS-stöd för visningsprogram i HTML5 och AS3.
@@ -90,13 +88,13 @@ Följande togs bort:
 
 **Adobe Analytics Training**
 
-* När du använder Dynamic Media-visningsprogram med Adobe Analytics-spårning baserat på `s_code.jsp` skickas&quot;sidförfrågningar&quot; i stället för&quot;spåra&quot; förfrågningar för alla spårade händelser. Den här processen resulterar i alltför stora sidvisningsvärden för sidor som innehåller ett Dynamic Media-visningsprogram. Åtgärda problemet genom att kopiera innehållet i AppMeasurementBridge.jsp till en JavaScript-fil som ska visas på visningsprogramsidan. Ersätt alla anrop till `s.t()` med `s.tl()` för alla andra händelser än LOAD-händelsen i den resulterande JavaScript. Problemet påverkar inte Scene7 videovisningsprogram som använder Adobe Analytics nya rapport om pulsslag.
+* När du använder Dynamic Media-visningsprogram med Adobe Analytics-spårning baserat på `s_code.jsp` skickas&quot;page&quot;-begäranden i stället för&quot;track&quot;-begäranden för alla spårade händelser. Den här processen resulterar i alltför stora sidvisningsmått för sidor som innehåller ett dynamiskt mediavisningsprogram. Åtgärda problemet genom att kopiera innehållet i AppMeasurementBridge.jsp till en JavaScript-fil som ska visas på visningsprogramsidan. Ersätt alla anrop till `s.t()` med `s.tl()` för alla andra händelser än LOAD-händelsen i den resulterande JavaScript. Problemet påverkar inte Scene7-videovisningsprogram som använder den nya rapporten Adobe Analytics Video Heartbeat.
 * Internet Explorer: &quot;Åtkomst nekad&quot; JavaScript-fel inträffar när SSL/HTTPS används med Adobe Analytics tracking aktiverat.
 
 **eCatalog-visningsprogram**
 
 * JavaScript-mallar i bildscheman stöds inte.
-* Om du navigerar till en annan HTML-sida och sedan återgår till den första sidan återställs visningsprogrammet ibland.
+* Om du navigerar till en annan HTML-sida och sedan återgår till den andra sidan återställs visningsprogrammet till den första.
 * Ställ in `ImageMapEffect` rollover-modifieraren på `1` för att anropa informationspaneler.
 * `Frametransition` inställd på `none` eller `fade` stöds inte.
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. Zooma in på sidan korrigerar layouten.
@@ -114,7 +112,7 @@ Följande togs bort:
 **Videovisningsprogram**
 
 * Det kan uppstå ett fel med maximal storlek i förhandsvisningsbilden. I så fall måste användaren öka gränsvärdet för Image Serving Publish.
-* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
+* Bildtexter för video kräver en företagsregeluppsättning om de är värdar för en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
 * Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
 * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
