--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-30-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-30-15.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 6451a838-312a-4ada-a11e-a597ed4eecbc
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '705'
+source-wordcount: '685'
 ht-degree: 0%
 
 ---
@@ -16,9 +16,7 @@ ht-degree: 0%
 
 ## Adobe Scene7 Viewers {#section-0b0363fae0274737bace119f281e740f}
 
-Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
-
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö.
 
 När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot Adobe standardtestserver och s7is1-preview-staging.scene7.com.
 
@@ -88,7 +86,7 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 **Videovisningsprogram**
 
 * Det kan uppstå ett fel med maximal storlek i förhandsvisningsbilden. Användaren måste öka gränsvärdet för Image Serving Publish.
-* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
+* Bildtexter för video kräver en företagsregeluppsättning om de är värdar för en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
 * Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
 * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
