--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: dde851f5-0766-4bd9-84b3-2600dd5f5700
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '815'
+source-wordcount: '795'
 ht-degree: 0%
 
 ---
@@ -20,12 +20,10 @@ Visningsprogrammets uppgraderingar är bakåtkompatibla. I den här versionen ha
 
 * Videovisningsprogram - knappen Spela upp/pausa visar inte uppspelningsläget.
 * Videovisningsprogram - Navigeringsmarkörer visas inte.
-* Visningsprogram för BasicZoom, Zoom och Spin - IconEffect visar inte eller visar SDK-standardbilder.
+* Visningsprogram för BasicZoom, Zoom och Spin - IconEffect visar inte eller visar SDK standardbilder.
 * Visningsprogram för utfällbar meny och zoomning - Knappar för färgrullning visas inte för stora uppsättningar.
 
-Vi rekommenderar att du testar tittare i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
-
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+Vi rekommenderar att du testar visningsprogram i Adobe testmiljö.
 
 När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot Adobe standardtestserver och s7is1-preview-staging.scene7.com.
 
@@ -38,7 +36,7 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 * Funktionen Favoriter har lagts till i eCatalog-visningsprogrammet.
 * Stöd har lagts till för att köra ett visningsprogram i behållaren som är dold med `display:none` CSS eller som är frånkopplad från DOM.
 * Lagt till möjlighet att styra vågrät och lodrät snurrkänslighet och låsa rotationsriktningen.
-* Visningsprogrammet använder en konsoliderad JavaScript-fil för SDK-begäranden.
+* Visningsprogrammet använder en konsoliderad JavaScript-fil för SDK-förfrågningar.
 
 ## Felkorrigeringar för 5.4.2 {#section-c64001afa2aa460180141bc8dcd507ec}
 
@@ -100,7 +98,7 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 **Videovisningsprogram**
 
 * Posterbilden kan ha ett fel av typen &quot;max size&quot;. Användaren måste öka gränsvärdet för Image Serving Publish.
-* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
+* Bildtexter för video kräver en företagsregeluppsättning om de är värdar för en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support.
 * Analysspårning kan rapportera fel uppspelningsprocent på grund av buffring.
 * Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
 * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
