--- a/help/s7-release-notes/s7rn610.md
+++ b/help/s7-release-notes/s7rn610.md
@@ -1,20 +1,20 @@
 ---
 title: Versionsinformation om Scene7 Publishing System 6.10 (maj 2015)
-description: Den senaste versionsinformationen som beskriver nya funktioner, förbättringar och korrigeringar för Adobe Scene7 Publishing System 6.10, en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud.
+description: Den senaste releaseversionen som beskriver de nya funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.10, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud.
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: dd998249-1986-491f-b0ab-554ab414f602
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '2321'
+source-wordcount: '2301'
 ht-degree: 0%
 
 ---
 
 # Versionsinformation om Scene7 Publishing System 6.10 (maj 2015){#scene-publishing-system-release-notes-may}
 
-Den senaste versionsinformationen som beskriver nya funktioner, förbättringar och korrigeringar för Adobe Scene7 Publishing System 6.10 som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud.
+Den senaste releaseversionen som beskriver de nya funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.10 som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud.
 
 ## Versionsinformation om Scene7 Publishing System 6.10 (maj 2015) {#topic-be8b44aea42643c496452726d4550226}
 
@@ -74,7 +74,7 @@ I **[!UICONTROL Application Setup]** > **[!UICONTROL General Settings]** grupp >
  </tbody>
 </table>
 
-* **Nya inställningar har lagts till i användningsklara visningsprogram för HTML5-snitts uppsättningar** - I **[!UICONTROL Setup]** > **[!UICONTROL Application Setup]** > **[!UICONTROL Viewers]** > **[!UICONTROL Viewer Presets]** > `Universal_HTML5_SpinSet_dark` eller `Universal_HTML5_SpinSet_light` har följande tillägg gjorts på varje visares respektive [!DNL Configure Viewer] -sida:
+* **Nya inställningar har lagts till i användningsklara visningsprogram för HTML5 med snurra uppsättningar** - I **[!UICONTROL Setup]** > **[!UICONTROL Application Setup]** > **[!UICONTROL Viewers]** > **[!UICONTROL Viewer Presets]** > `Universal_HTML5_SpinSet_dark` eller `Universal_HTML5_SpinSet_light` har följande tillägg gjorts på varje visares respektive [!DNL Configure Viewer] -sida:
 
 <table id="table_E78C924E34894CD7BE080C0D71500784"> 
  <thead> 
@@ -99,7 +99,7 @@ I **[!UICONTROL Application Setup]** > **[!UICONTROL General Settings]** grupp >
  </tbody>
 </table>
 
-* **Nya inställningar har lagts till i användningsklara HTML5 eCatalog-visningsprogram** - I **[!UICONTROL Setup]** > **[!UICONTROL Application Setup]** > **[!UICONTROL Viewer Presets]** > `Universal_HTML5_eCatalog` eller `Universal_HTML5_eCatalog_Adv` har följande tillägg gjorts på varje visares respektive [!DNL Configure Viewer]-sida:
+* **Nya inställningar har lagts till i färdiga HTML5 eCatalog-visningsprogram** - I **[!UICONTROL Setup]** > **[!UICONTROL Application Setup]** > **[!UICONTROL Viewer Presets]** > `Universal_HTML5_eCatalog` eller `Universal_HTML5_eCatalog_Adv` har följande tillägg gjorts på varje visares respektive [!DNL Configure Viewer]-sida:
 
 <table id="table_65BA9F98D1D041109A44B1C130EF4EFA"> 
  <thead> 
@@ -197,7 +197,7 @@ I **[!UICONTROL Application Setup]** > **[!UICONTROL General Settings]** grupp >
 
 **Funktioner som inte längre stöds**
 
-* Katalogservern kan synkroniseras igen i IPS Classic Publish-valideringen - borttagen.
+* Katalogservern kan synkroniseras igen i IPS Classic Publish Validate - borttagen.
 * Du kan inte längre ange värden för tomma eller duplicerade metadatataggar.
 
 **Felkorrigeringar**
@@ -211,8 +211,8 @@ I **[!UICONTROL Application Setup]** > **[!UICONTROL General Settings]** grupp >
 * Videominiatyrbilder som inte kunde genereras lämnades i tillståndet Väntar i kö.
 * Ansiktsvillkor med mappåterställning mellan stor överföring av `deleteFolder` och överföring av serverkatalog.
 * PDF-filer loggades som publicerade två gånger per publiceringsserver vid tidig publicering vid överföring.
-* Om du överför flera PSD-filer med samma lagernamn uppstod optimeringsfel.
-* PDFL-rastrering av PDF resulterade i en oväntad vit linje i den genererade bilden.
+* Överföring av flera PSD-filer med samma lagernamn ledde till optimeringsfel.
+* PDFL Rastrering av kunder PDF resulterade i en oväntad vit linje i den genererade bilden.
 * Miniatyrbildsfiler för video publicerades flera gånger vid överföring.
 * Identifiering av duplicerad överföringsfil genererade två överföringsmeddelanden, vilket utlöste den slutförda filredovisningen.
 * Den underordnade XML-filen för videoomkodning loggades som publicerad flera gånger vid uppdatering.
@@ -226,11 +226,9 @@ I **[!UICONTROL Application Setup]** > **[!UICONTROL General Settings]** grupp >
 
 ## Tittare {#section-833ab92c91c941d2bfdc27f233f582ad}
 
-**Nya funktioner, förbättringar och felkorrigeringar för Dynamic Media Image Serving Viewer 5.2.2**
+**Nya funktioner, förbättringar och felkorrigeringar för Dynamic Media Image Serving Viewers 5.2.2**
 
-Visningsprogrammets uppgraderingar är bakåtkompatibla - inga ändringar behövs i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
-
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+Visningsprogrammets uppgraderingar är bakåtkompatibla - inga ändringar behövs i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö.
 
 När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. Om du använder färdiga HTML5-visningsprogram är det bästa sättet att testa mot Adobe standardtestserver och s7is5-preview-staging.scene7.com.
 
@@ -244,7 +242,7 @@ Se även [Referensguide för visningsprogram](https://experienceleague.adobe.com
 * Stöd för IE11 i helskärmsläge har lagts till.
 * Refactored simulated (non-native) full-screen support in Container.
 * Ökade CSS-storleken med liten markör för större telefoner.
-* CSS-storleksmarkörer för visningsprogrammen HTML5 Spin, BasicZoom, Zoom, Spin och MixedMedia har tagits bort i webbläsare för stationära datorer.
+* CSS-storleksmarkörer för visningsprogrammen HTML5 Spin, BasicZoom, Zoom, Spin och MixedMedia har tagits bort i webbläsare för datorer.
 * Stöd har lagts till för kvalitetskonfiguration av förinlästa bildrutor i SpinView.
 * Fast - Galaxy S4, stående läge: Felaktig markör för CSS-storlek användes när helskärmsläge aktiverades.
 * Korrigerat - [eCatalog]-bildscheman fastnade efter användning av JavaScript-mallar för extern länkning i Internet Explorer 9.
@@ -270,7 +268,7 @@ PageView
 
 SpinView
 
-* Automatisk rotation i HTML5 har implementerats.
+* Implementerad automatisk rotation i HTML5.
 * Ytterligare statushändelser lades till.
 
 Färgrutor
@@ -298,22 +296,22 @@ ZoomView
 
 * Manuellt skapade färgruteuppsättningar med storleken 1 avpublicerades.
 * Inget stöd för png8 med gray pixelType.
-* Publish-inställningarna visade inte färgprofiler från Scene7 Shared Assets-företaget.
+* Publiceringsinställningarna visade inte färgprofiler från Scene7 Shared Assets.
 * Överför från FTP-skärm: FTP-mappar sorterades inte, men utdata var en sorterad mapplista.
 * Beskrivningen av fliken Behörigheter för tillgångsåtkomst i dialogrutan Redigera grupp i inställningarna för mediaportal har ändrats.
-* Felaktigt format `clientAddressFilter` orsakade ett undantag från katalogservern när Publish-inställningarna för säker testbildservering användes.
+* Felaktigt format `clientAddressFilter` orsakade ett undantag från katalogservern när publiceringsinställningarna för säker testbildsvisning användes.
 * Kopiera URL för PDF fungerar inte i Chrome webbläsare när det finns flera på varandra följande blanksteg i URL:en.
 * Inkonsekvent FTP-server- och FTP-kontoinformation i Scene7 Publishing System.
 * Knappen [!DNL Adobe Experience Cloud] för länkningsguiden har tagits bort.
 * MPEG-video kodades, men kunde inte spelas upp.
 * Den dagliga rapporten om bandbredd har brutits efter en s7report-webbtjänsts uppdatering.
 * Start- och slutdatumet angavs felaktigt i den ursprungliga instrumentpanelens domänrapport.
-* Förbättringar av nedladdningen av webb-till-tryck i Scene7 Publishing System.
+* Förfiningar av nedladdningen av web-to-Print i Scene7 Publishing System.
 * Implementerat konfigurationsanvändargränssnitt för att skapa och uppdatera metadatafält av taggtyp. Stöd för **[!UICONTROL Metadata Field Types]** i parametern `fieldType` inkluderar endast `SingleFixedTag` och `BooleanTag`.
 
 * `@scene7.com` har ändrats till `@adobe.com` i Skicka-e-post från adress.
 
-* Tillagd Image Serving Publish-typalternativ.
+* Publiceringstypen Added Image Serving.
 * Video Streaming-data visades inte på grund av felaktiga datum i begärandetexten.
 * Historiska lagringsdata var inte tillgängliga för lagringsrapporten.
 * Felsvaret fick ett fel vid försök att komma åt Bandwidth- och Storage-inställningarna.
@@ -325,10 +323,10 @@ ZoomView
 
 ## Funktioner som inte längre stöds {#section-9295ea9313c84695b19bca0e0f01a690}
 
-* **Flash Viewers End-of-Life Notice** *Från och med den 31 januari 2017 upphörde Adobe Scene7 (nu Dynamic Media Classic) officiellt med stöd för visningsprogramplattformen för Flash.*
+* **Meddelande om att Flash-visningsprogram har upphört att gälla** *Från och med den 31 januari 2017 upphör Adobe Scene7 (nu Dynamic Media Classic) officiellt med stöd för Flash-visningsprogramplattformen.*
 
 * Påminnelse: Från och med den 31 januari 2014 upphörde Scene7 officiellt stödet för DHTML-visningsplattformen.
-* Scene7 Creative Suite Extensions används inte i den här versionen eftersom Creative Cloud-programmets stöd för Flash-paneler har tagits bort. Ytterligare utveckling av arbetsflödena för innehållskonsumtion fokuserar på Adobe Experience Manager Dynamic Media och Creative Cloud. För Scene7 finns överförings- och exportfunktionerna i Scene7 Publishing System kvar och kan användas i stället.
+* Scene7 Creative Suite Extensions används inte i den här versionen eftersom Creative Cloud-programmets stöd för Flash-paneler har tagits bort. Ytterligare utveckling av arbetsflöden för innehållsöverföring fokuserar på Adobe Experience Manager Dynamic Media och Creative Cloud. För Scene7 finns fortfarande funktioner för överföring och export i Scene7 Publishing System som kan användas istället.
 * UGC-video har tagits bort i den här versionen på grund av låg användning. Om du konfigurerar ett annat Dynamic Media Classic-konto kan det fungera som en ersättningslösning för UGC-video. Kontakta Adobe tekniska support om du vill ha ett annat konto konfigurerat.
 * Textavstavning används inte i den här versionen på grund av begränsad användning. Avstavningsordlistorna definierar hur ord kan delas upp och avstavas för ett optimalt textflöde.
-* Metadata Server och Likhetssökning togs bort 2015 på grund av låg användning. När det officiella måldatumet för borttagning av gamla kunder annonserades av Adobe Technical Support.
+* Metadata Server och Likhetssökning togs bort 2015 på grund av låg användning. När det officiella måldatumet för borttagning av gamla kunder annonserades av Adobe tekniska support.
