--- a/help/s7-release-notes/s7rn69.md
+++ b/help/s7-release-notes/s7rn69.md
@@ -1,26 +1,26 @@
 ---
 title: Versionsinformation om Scene7 Publishing System 6.9 (oktober 2014)
-description: Den senaste releaseversionen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för Adobe Scene7 Publishing System 6.9, en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud.
+description: I den senaste releaseversionen beskrivs de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.9, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud.
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 5f120925-d387-4bac-8a4d-f67a198b2b8e
-source-git-commit: 4f81f755789613222a66bed2961117604ae19e62
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '1827'
+source-wordcount: '1807'
 ht-degree: 0%
 
 ---
 
 # Versionsinformation om Scene7 Publishing System 6.9 (oktober 2014){#scene-publishing-system-release-notes-october}
 
-Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för Adobe Scene7 Publishing System 6.9 som en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud.
+I den senaste releaseversionen beskrivs de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.9 som en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud.
 
 ## Versionsinformation om Scene7 Publishing System 6.9 (oktober 2014) {#topic-1d3011ecca71488abe0d8156a9fc1b97}
 
 Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för [!DNL Adobe Scene7 Publishing System] 6.9-delen av Adobe Experience Manager-lösningen i [!DNL Adobe Experience Cloud].
 
-* [Scene7 Publishing System 6.9 - i korthet](s7rn69.md#section-2ed72b7902be4509876d81f25b5632ce)
+* [Scene7 Publishing System 6.9 - versionsinformation](s7rn69.md#section-2ed72b7902be4509876d81f25b5632ce)
 * [Bilder](s7rn69.md#section-98a61ea9a09940639f357f36969d6e55)
 * [Video](s7rn69.md#section-69101b28504543a7ae8a9346d381f913)
 * [Webbutskrift](s7rn69.md#section-17c5591d279a48d3b0aea085a19d6321)
@@ -129,13 +129,11 @@ ZoomView
 
 * Fast - Inbäddade modifierare omges inte av citattecken
 
-**Nya funktioner, förbättringar och felkorrigeringar för Dynamic Media Image Serving Viewer 5.1.1**
+**Nya funktioner, förbättringar och felkorrigeringar för Dynamic Media Image Serving Viewers 5.1.1**
 
-Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
+Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö.
 
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
-
-När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga HTML5-visningsprogram är det bäst att testa mot Adobe standardtestserver och s7is1-preview-staging.scene7.com.
+När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga HTML5-visningsprogram bör du testa mot Adobe standardtestserver och s7is1-preview-staging.scene7.com.
 
 Nya funktioner och förbättringar
 
@@ -144,19 +142,19 @@ Se även [Referenshandbok för Scene7-visningsprogram](https://experienceleague.
 * Uppdaterat stöd för Internet Explorer 11.
 * Ändrade visningsprogram till att använda `Track requests` i stället för `Page requests` för Adobe Analytics-spårning.
 * Stöd för responsiva bilder har lagts till med bildkommandon och/eller bildförinställningar som baseras på bildens bredd.
-* Stöd för att skicka textsträngar för lokalisering till JSON-argument för visningsprogram i HTML5 har lagts till.
-* Stöd för inbyggda sidbläddringar i visningsrutor i HTML5 har lagts till.
-* Förbättrat stöd för komplexa resurser och bildmallar för visningsprogram i HTML5.
+* Stöd för att skicka lokaliseringstextsträngar till JSON-argument för HTML5-visningsprogram har lagts till.
+* Stöd för inbyggda sidbläddringar i färgrutor i HTML5-visningsprogrammet har lagts till.
+* Förbättrat stöd för komplexa resurser och bildmallar för HTML5-visningsprogram.
 * Stöd för innehållsförteckningar har lagts till i HTML5 eCatalog Viewer.
-* Stöd för övertäckningar av bildscheman och ikoner har lagts till i HTML5 eCatalog.
-* Stöd har lagts till för animering av sidvändning i HTML5 eCatalog Viewer.
+* Stöd för bildmappsövertäckningar och ikoner har lagts till i HTML5 eCatalog.
+* Stöd för sidvändningsanimering har lagts till i HTML5 eCatalog Viewer.
 * Stöd för inbyggda sidbläddringar i HTML5 eCatalog har lagts till.
-* Stöd för att visa smala bilder har lagts till med modifieraren `highlightmode` i HTML5-visningsprogrammet
-* Stöd har lagts till för att styra uppskalning av bilder med `zoomfactor`-modifieraren i HTML5-visningsprogrammet.
-* Stöd för spårning av händelser som genererats av HTML5-visningsprogrammet har lagts till.
-* Stöd för bildtexter för video (endast första videon) har lagts till i MixedMedia Viewer för HTML5.
+* Stöd för att visa smala bilder har lagts till med modifieraren `highlightmode` i HTML5 Flyout Viewer
+* Stöd har lagts till för att styra uppskalning av bilder med `zoomfactor`-modifierare i HTML5 Flyout Viewer.
+* Stöd för spårning av händelser som genererats av HTML5 Flyout Viewer har lagts till.
+* Stöd för bildtexter för video (endast första videon) har lagts till i HTML5 MixedMedia Viewer.
 * Ökad ursprunglig bithastighet som standard till 1 400 för visningsprogrammen HTML5 Video och MixedMedia.
-* Stöd för uppspelning av video i loopar har lagts till i HTML5 Video Viewer.
+* Stöd för uppspelning av loopvideo har lagts till i HTML5 Video Viewer.
 * Stöd för navigeringskapitel har lagts till i HTML5 Video Viewer
 
 Felkorrigeringar
@@ -166,15 +164,15 @@ Felkorrigeringar
 * Bilder: modifierare för bildservering som har lagts till i assetID ignoreras.
 * Internet Explorer 9: s7sdk.event: PageMouseEvent: click- och double-click-händelser utlöser en krasch i webbläsaren.
 * Internet Explorer 9 och Internet Explorer 10: Visningsprogrammet för eCatalog bryts när bildschemat har aktiverats med JavaScript-mallen.
-* HTML5 MixedMedia Viewer: Zoomknappens lägen återställs inte när resurstyper byts ut.
-* HTML5 MixedMedia Viewer: Visningsprogrammet komprimerades i svarsläge om den första resursen är 2dspinset.
+* HTML5 MixedMedia Viewer: Zoomknappens tillstånd återställs inte när resurstyper byts ut.
+* HTML5 MixedMedia Viewer: Visningsprogrammet komprimeras i svarsläge om den första resursen är 2dspinset.
 * Firefox: Brutna bildikoner visas kort vid utfällbar bild tills rutorna har lästs in.
 * Knipningsgester genererar inte zoom.
 * eCatalog: Imagemaps: JavaScript-fel med relativa länkar
 
 Kända fel och begränsningar
 
-Alla Scene7-visningsprogram
+Alla Scene7-visningar
 
 * Vattenstämplar, förvrängning och låsning stöds inte.
 * Bildförinställningar stöds inte.
@@ -190,12 +188,12 @@ HTML5-alla visningsprogram
 
 HTML5 eCatalog-visningsprogram
 
-* Om du navigerar till en annan HTML-sida och sedan återgår till den första sidan återställs visningsprogrammet ibland.
+* Om du navigerar till en annan HTML-sida och sedan återgår till den andra sidan återställs visningsprogrammet till den första.
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. Zooma in på sidan korrigerar layouten.
 * Interna länkar endast till vänstersidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 * InitalFrame länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 
-HTML5 visningsprogram för blandade media
+HTML5 Mixed Media Viewer
 
 * Ljudspårets uppspelning stöds inte.
 
@@ -206,7 +204,7 @@ HTML5 Social Viewer
 HTML5 Video Viewer
 
 * Posterbilden kan ha ett fel av typen &quot;max size&quot;. Därför måste du öka gränsvärdet för Image Serving Publish.
-* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
+* Bildtexter för video kräver en företagsregeluppsättning om de är värdar för en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
 * Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
 * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
@@ -217,15 +215,15 @@ HTML5 Video Viewer
 
 * Det totala antalet exporterade resurser visar sig vara ett större än det ursprungliga antalet i informationen om exportjobbloggen.
 * I den genererade förinställningen 1d-spin per batchuppsättning ska den bara visa varningen en gång när redigeraren för snurra uppsättning öppnas.
-* Det går inte att förhandsgranska förinställningar för HTML5-videovisningsprogrammet som är färdiga att användas.
-* Scene7 Publishing System fortsatte att minnas gruppen, även om regeln skrevs om.
-* I Scene7 Publishing System visades inte viss kod för reguljära uttryck för en upprepning korrekt.
+* Det går inte att förhandsgranska färdiga förinställningar för HTML5 Video Viewer.
+* Scene7 Publishing System fortsatte att komma ihåg gruppen, även om regeln skrevs om.
+* Scene7 Publishing System visade inte korrekt viss kod för reguljära uttryck för en upprepning.
 * Alla förinställningar för gruppuppsättningar används när de överförs, om ingen av förinställningarna är markerad.
 
 ## Funktioner som inte längre stöds {#section-b061ad3d170a45ee8e694f997fd5d8ef}
 
-* Scene7 Creative Suite Extensions används inte i den här versionen eftersom Creative Cloud-programmets stöd för Flash-paneler har tagits bort. Ytterligare utveckling av arbetsflödena för innehållskonsumtion fokuserar på Adobe Experience Manager Dynamic Media och Creative Cloud. För Scene7 finns överförings- och exportfunktionerna i Scene7 Publishing System kvar och kan användas i stället.
+* Scene7 Creative Suite Extensions används inte i den här versionen eftersom Creative Cloud-programmets stöd för Flash-paneler har tagits bort. Ytterligare utveckling av arbetsflöden för innehållsöverföring fokuserar på Adobe Experience Manager Dynamic Media och Creative Cloud. För Scene7 finns fortfarande funktioner för överföring och export i Scene7 Publishing System som kan användas istället.
 * UGC-video har tagits bort i den här versionen på grund av låg användning. Om du konfigurerar ett annat SPS-konto kan det fungera som en ersättningslösning för UGC-video. Kontakta Adobe tekniska support om du vill ha ett annat konto konfigurerat.
 * Textavstavning används inte i den här versionen på grund av begränsad användning. Avstavningsordlistorna definierar hur ord kan delas upp och avstavas för ett optimalt textflöde.
-* Metadata Server och Likhetssökning togs bort 2015 på grund av låg användning. När det officiella måldatumet för borttagning av gamla kunder annonserades av Adobe Technical Support.
+* Metadata Server och Likhetssökning togs bort 2015 på grund av låg användning. När det officiella måldatumet för borttagning av gamla kunder annonserades av Adobe tekniska support.
 * Påminnelse: Från och med den 31 januari 2014 upphörde Scene7 officiellt stödet för DHTML-visningsplattformen.
