--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 3008cdf7-7bc3-4e68-910d-5dbd1db41f8a
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '859'
+source-wordcount: '839'
 ht-degree: 0%
 
 ---
@@ -16,13 +16,11 @@ ht-degree: 0%
 
 ## Adobe Scene7 Viewers {#section-0b0363fae0274737bace119f281e740f}
 
-Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
-
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö.
 
 När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot Adobe standardtestserver och s7is1-preview-staging.scene7.com.
 
-**VIKTIGT!** Den senaste versionen av Firefox förhindrar nu att plugin-programmet för Adobe Flash körs på webbplatser som standard. Om du har distribuerat den Scene7 videospelare som använder plugin-programmet för Flash på stationära datorer har du följande tre alternativ:
+**VIKTIGT!** Den senaste versionen av Firefox förhindrar nu att Adobe Flash-plugin körs på webbplatser som standard. Om du har distribuerat den Scene7-videospelare som använder plugin-programmet Adobe Flash på stationära datorer har du följande tre alternativ:
 
 * Användarna ser en uppmaning högst upp på webbsidan som de visar i Firefox. I uppmaningen kan de antingen välja att fortsätta blockera plugin-programmet eller tillåta att plugin-programmet körs, och då spelas videon upp som vanligt.
 * Ställ in videospelaren på läget `playback=native`. Då spelas MP4-videon upp progressivt.
@@ -31,7 +29,7 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 
 * Skapa en OGG-version av videon som kan användas som reserv.
 
-Adobe undersöker alternativ för att åtgärda detta problem i Firefox i en framtida version.
+Adobe undersöker olika alternativ för att åtgärda detta problem i Firefox i en framtida version.
 
 ## Nya funktioner och förbättringar i 5.2.3 {#section-83c354cfbfce4b9db0b543301a25491f}
 
@@ -103,7 +101,7 @@ Adobe undersöker alternativ för att åtgärda detta problem i Firefox i en fra
 **Videovisningsprogram**
 
 * Det kan uppstå ett fel med maximal storlek i förhandsvisningsbilden. Användaren måste öka gränsvärdet för Image Serving Publish.
-* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Dynamic Media-server. Kontakta Adobe tekniska support för att få hjälp.
+* Bildtexter kräver en företagsregeluppsättning om de är värdar för en HTML-sida som hanteras från en extern server som inte är en dynamisk medieserver. Kontakta Adobe tekniska support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
 * Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
 * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
