Updated by mdAutofix.py

--- a/help/s7-release-notes/s7rn69.md
+++ b/help/s7-release-notes/s7rn69.md
@@ -33,9 +33,9 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
 
 I version 6.9 finns ett nytt avancerat visningsprogram för eCatalog, inline zoom viewer, videospelare med mera. Med dessa nya funktioner kan ni utforma och leverera innehållsrika, responsiva, interaktiva upplevelser som ökar konverteringsgraden i alla digitala kanaler.
 
-* ** Advanced eCatalog Viewer** - Med en innehållsförteckning, sidanimering, överlägg med bildscheman med mera kan du nu erbjuda en mer engagerande onlinekatalog. Ni kan markera produkter och tjänster så att kunderna kan länka direkt till sidor som leder till ökad konvertering.
-* ** Ny inline Zoom Viewer** - Möjliggör enkel in-window-zoomning utan några knappklick, så att du kan zooma och ändå behålla synligheten för all produktinformation på sidan.
-* ** Förbättringar av videospelaren** - Färdiga videospelare har nu funktioner för automatisk slinga för kontinuerlig videouppspelning och kapitelnavigering som gör det enkelt att hitta innehåll i långa videor. Mixed Media Video Players har nu stöd för bildtexter för global räckvidd.
+* **&#x200B; Advanced eCatalog Viewer** - Med en innehållsförteckning, sidanimering, överlägg med bildscheman med mera kan du nu erbjuda en mer engagerande onlinekatalog. Ni kan markera produkter och tjänster så att kunderna kan länka direkt till sidor som leder till ökad konvertering.
+* **&#x200B; Ny inline Zoom Viewer** - Möjliggör enkel in-window-zoomning utan några knappklick, så att du kan zooma och ändå behålla synligheten för all produktinformation på sidan.
+* **&#x200B; Förbättringar av videospelaren** - Färdiga videospelare har nu funktioner för automatisk slinga för kontinuerlig videouppspelning och kapitelnavigering som gör det enkelt att hitta innehåll i långa videor. Mixed Media Video Players har nu stöd för bildtexter för global räckvidd.
 * **Responsiv design** - Optimera kvaliteten på responsiva bildupplevelser ytterligare genom att definiera olika bildförinställningar eller modifierare för varje brytpunkt.
 * **Anpassning av visningsprogram** - Nu kan du dynamiskt ställa in och ändra visningsprogrammets format och beteenden direkt.
 * **Säker förhandsvisning för Visual Configurator** - Förhandsgranska och testa visuell återgivning säkert för personaliserade upplevelser innan du flyttar dem till produktion.
